5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1850_2603.log
== TEST (2019-06-28 19:44:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
mz = zeros((4,4),dtype = int)

for i in range(4):
	for j in range(4):
		mz[i,j] = mat[-1*(i+1)]
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:45:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
mz = zeros((4,4),dtype = int)

for i in range(4):
	for j in range(4):
		mz[i,j] = mat[-1*(i+1),-1*(j+1)]
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:47:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
mz = zeros((4,4),dtype = int)

for i in range(4):
	for j in range(4):
		mz[i,j] = mat[-1*(i+1),j]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:47:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
mz = zeros((4,4),dtype = int)

for i in range(4):
	for j in range(4):
		mz[i,j] = mat[-1*(i+1),j]
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 19:47:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
mz = zeros((4,4),dtype = int)

for i in range(4):
	for j in range(4):
		mz[i,j] = mat[-1*(i+1),j]
print(mz)
-- EXECUTION TIME:
0.950691
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 4 4 3]
 [2 3 3 3]
 [3 2 2 3]
 [4 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:47:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
mz = zeros((4,4),dtype = int)

for i in range(4):
	for j in range(4):
		mz[i,j] = mat[-1*(i+1),j]
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 19:48:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
mz = zeros((4,4),dtype = int)

for i in range(4):
	for j in range(4):
		mz[i,j] = mat[-1*(i+1),j]
print(mz)
-- EXECUTION TIME:
1.14287
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[1 4 4 3]
 [2 3 3 3]
 [3 2 2 3]
 [4 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:53:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]

for i in range(c):
	for j in range(c):
		mat[:,j] = sorted(mat, reverse = True)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:54:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]

for i in range(c):
	for j in range(c):
		mat[:,j] = sorted(mat.T, reverse = True)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:55:11) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]

for i in range(c):
	for j in range(c):
		mat[:,j] = sorted(mat.all(), reverse = True)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:55:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]

for i in range(c):
	for j in range(c):
		mat[:,j] = sorted(mat.any(), reverse = True)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:55:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]

for i in range(c):
	for j in range(c):
		mz[:,j] = sorted(mat, reverse = True)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:56:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mz[:,j] = sorted(mat, reverse = True)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:56:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mz[:,j] = sorted(mat, reverse = True)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:56:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mz[i,:] = sorted(mat, reverse = True)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:57:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mz[i,:].all = sorted(mat, reverse = True)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:57:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mz[i,:].all() = sorted(mat, reverse = True)
print(mz)
-- ERROR:
File "XXXX", line 8
    mz[i,:].all() = sorted(mat, reverse = True)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:57:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mz[:,j].all() = sorted(mat, reverse = True)
print(mz)
-- ERROR:
File "XXXX", line 8
    mz[:,j].all() = sorted(mat, reverse = True)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:57:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mat[:,j].all() = sorted(mat, reverse = True)
print(mz)
-- ERROR:
File "XXXX", line 8
    mat[:,j].all() = sorted(mat, reverse = True)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:57:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mat[:,j].all = sorted(mat, reverse = True)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:58:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mat[:,j] = sorted(mat[:,j], reverse = True)
print(mz)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 19:58:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mat[:,j] = sorted(mat[:,j], reverse = True)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 19:58:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite a matriz: ")))
c = mat.shape [1]
mz = zeros((4,4), dtype = int)
for i in range(c):
	for j in range(c):
		mat[:,j] = sorted(mat[:,j], reverse = True)
print(mat)
-- EXECUTION TIME:
0.94843
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
